front end style/ register/login

--- a/client/public/assets/App.css
+++ b/client/public/assets/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,18 +35,12 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
 body {
   background: url("/assets/images/forestlakebackground.jpg") no-repeat center
     center;
   background-size: cover;
-  height: 790px;
-}
-
-.card-content {
-  background-color: rgba(109, 192, 109, 0.781);
-  width: 50%;
-  margin: 0% 23%;
+  height: 900px;
 }
 
 #email-input {
