--- a/client/src/pages/pages.css
+++ b/client/src/pages/pages.css
@@ -8,6 +8,10 @@
   background-color: rgba(109, 192, 109, 0.781);
   text-align: center;
 }
+#loginbox {
+  background-color: rgba(109, 192, 109, 0.781);
+  text-align: center;
+}
 
 .go-green {
   border: solid;
@@ -25,6 +29,7 @@
 }
 
 #loginbtn {
+  padding: 5px;
   color: blue;
 }
 
