Worked on search articles

--- a/client/src/pages/maps.css
+++ b/client/src/pages/maps.css
@@ -15,7 +15,8 @@
 }
 
 body {
-  background-image: url("/assets/images/forest-trees.jpg");
+  /* background-image: url("/assets/images/forest-trees.jpg"); */
+  background-image: url("/assets/images/scenic-pic-4.jpg");
 
   /* Background image is centered vertically and horizontally at all times */
   background-position: center center;
